--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.14",
     "bootstrap": "^4.4.1",
     "export-to-csv": "^0.2.1",
+    "file-saver": "^2.0.2",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "ngx-daterangepicker-material": "^2.1.11",
